# hfish

./: ChangeLog.md  LICENSE  Main.hs  Makefile  README.md  build  build-static  hfish.cabal
Fish/Interpreter/: Builtins.hs  Concurrent.hs  Core.hs  Cwd.hs  FdTable.hs  Globbed.hs  IO.hs  Init.hs  Interpreter.hs  Parsing.hs  Slice.hs  Status.hs  Util.hs  Var.hs
Fish/Interpreter/Builtins/: Bool.hs  Cd.hs  Contains.hs  Dirstack.hs  Echo.hs  Eval.hs  Exit.hs  Flow.hs  Loop.hs  Math.hs  Random.hs  Read.hs  Seq.hs  Source.hs  String.hs
Fish/Interpreter/Main/: SimpleMain.hs
Fish/Interpreter/Pid/: Dangerous.hs  Pid.hs  Unsafe.hs
Fish/Interpreter/Process/: Pid.hs  Process.hs  Unsafe.hs
HFish/: Debug.hs  Description.hs  Dispatch.hs  Main.hs  SimpleMain.hs  Startup.hs  Types.hs  Utils.hs  Version.hs
HFish/Interpreter/: Args.hs  Builtins.hs  Concurrent.hs  Core.hs  Cwd.hs  Description.hs  Env.hs  Events.hs  ExMode.hs  FdTable.hs  FuncSt.hs  Globbed.hs  IO.hs  Init.hs  Interpreter.hs  IsText.hs  Parsing.hs  Scope.hs  SetCmd.hs  SetCommand.hs  Slice.hs  Status.hs  Stringy.hs  Util.hs  Var.hs  Version.hs
HFish/Interpreter/Builtins/: Bool.hs  Breakpoint.hs  Cd.hs  Contains.hs  Count.hs  Debug.hs  Dirstack.hs  Echo.hs  Emit.hs  Eval.hs  Exit.hs  Flow.hs  Functions.hs  Math.hs  Printf.hs  Random.hs  Read.hs  Seq.hs  Source.hs  String.hs  Test.hs
HFish/Interpreter/IO/: Lazy.hs
HFish/Interpreter/Main/: SimpleMain.hs
HFish/Interpreter/Posix/: IO.hs
HFish/Interpreter/Posix/IO/: ByteString.hs  String.hs  Text.hs
HFish/Interpreter/Process/: FdSetup.hs  Pid.hs  Process.hs  Unsafe.hs
HFish/Main/: Interactive.hs  NonInteractive.hs
config/: config.hfish
config/functions/: dec_audio.hfish  dec_light.hfish  inc_audio.hfish  inc_light.hfish  toggle_audio.hfish
nix/: hfish-collection-sources.nix  hfish-collection.nix
