name:                hfish
version:             0.1.0.0
synopsis:            Interpreter for a fish-like language
-- description:         
license:             GPL-3
license-file:        LICENSE
-- author:              
-- maintainer:          
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hfish
  main-is:             Main.hs
  other-modules:       HFish.Interpreter.Args
  other-modules:       HFish.Interpreter.Builtins
  other-modules:       HFish.Interpreter.Builtins.Bool
  other-modules:       HFish.Interpreter.Builtins.Breakpoint
  other-modules:       HFish.Interpreter.Builtins.Cd
  other-modules:       HFish.Interpreter.Builtins.Contains
  other-modules:       HFish.Interpreter.Builtins.Count
  other-modules:       HFish.Interpreter.Builtins.Debug
  other-modules:       HFish.Interpreter.Builtins.Dirstack
  other-modules:       HFish.Interpreter.Builtins.Echo
  other-modules:       HFish.Interpreter.Builtins.Emit
  other-modules:       HFish.Interpreter.Builtins.Eval
  other-modules:       HFish.Interpreter.Builtins.Exit
  other-modules:       HFish.Interpreter.Builtins.Flow
  other-modules:       HFish.Interpreter.Builtins.Functions
  other-modules:       HFish.Interpreter.Builtins.Math
  other-modules:       HFish.Interpreter.Builtins.Printf
  other-modules:       HFish.Interpreter.Builtins.Random
  other-modules:       HFish.Interpreter.Builtins.Read
  other-modules:       HFish.Interpreter.Builtins.Seq
  other-modules:       HFish.Interpreter.Builtins.Source
  other-modules:       HFish.Interpreter.Builtins.String
  other-modules:       HFish.Interpreter.Builtins.Test
  other-modules:       HFish.Interpreter.Concurrent
  other-modules:       HFish.Interpreter.Core
  other-modules:       HFish.Interpreter.Cwd
  other-modules:       HFish.Interpreter.Description
  other-modules:       HFish.Interpreter.Env
  other-modules:       HFish.Interpreter.Events
  other-modules:       HFish.Interpreter.ExMode
  other-modules:       HFish.Interpreter.FdTable
  other-modules:       HFish.Interpreter.FuncSt
  other-modules:       HFish.Interpreter.Globbed
  other-modules:       HFish.Interpreter.IO
  other-modules:       HFish.Interpreter.IO.Lazy
  other-modules:       HFish.Interpreter.Init
  other-modules:       HFish.Interpreter.Interpreter
  other-modules:       HFish.Interpreter.Main.SimpleMain
  other-modules:       HFish.Interpreter.Parsing
  other-modules:       HFish.Interpreter.Process.FdSetup
  other-modules:       HFish.Interpreter.Process.Pid
  other-modules:       HFish.Interpreter.Process.Process
  other-modules:       HFish.Interpreter.Scope
  other-modules:       HFish.Interpreter.SetCmd
  other-modules:       HFish.Interpreter.Slice
  other-modules:       HFish.Interpreter.Status
  other-modules:       HFish.Interpreter.Stringy
  other-modules:       HFish.Interpreter.Util
  other-modules:       HFish.Interpreter.Var
  other-modules:       HFish.Interpreter.Version

  other-extensions:    TemplateHaskell, RankNTypes, GeneralizedNewtypeDeriving, LambdaCase, OverloadedStrings

  build-depends:       base                 >=4.9 && <4.11
  build-depends:       text                 >=1.2 && <1.3
  build-depends:       containers           >=0.5 && <0.6
  build-depends:       lens                 >=4.15 && <4.16
  build-depends:       directory            >= 1.3.0 && < 1.4
  build-depends:       mtl                  >=2.2 && <2.3
  build-depends:       process              >=1.4 && <1.7
  build-depends:       temporary            >=1.2 && <1.3
  build-depends:       filepath             >=1.4 && <1.5
  build-depends:       regex-applicative    >=0.3 && <0.4
  build-depends:       trifecta             >=1.6 && <1.8
  build-depends:       ansi-wl-pprint       >=0.6 && <0.7
  build-depends:       unix                 >=2.7 && <2.8
  build-depends:       haskeline            >=0.7 && <0.8
  build-depends:       optparse-applicative >=0.13 && <0.15
  build-depends:       scientific           >=0.3 && <0.4
  build-depends:       parsers              >=0.12 && <0.13
  build-depends:       attoparsec           >=0.13 && <0.14
  build-depends:       random               >=1.1 && <1.2
  build-depends:       bytestring           >= 0.10.8 && < 0.11
  build-depends:       GenericPretty        >= 1.2.1 && < 1.3
  build-depends:       pretty               >= 1.1.3 && < 1.2
  build-depends:       deepseq              >= 1.4.2 && < 1.5
  build-depends:       hashable             >= 1.2.4 && < 1.3
  build-depends:       unordered-containers >= 0.2.7 && < 0.3
  build-depends:       gitrev               >= 1.2.0 && < 1.4
  build-depends:       posix-fd-io          >= 0.1.0 && < 0.2
  build-depends:       fish-lang            >= 0.1.0 && < 0.2
  build-depends:       fish-parser          >=0.1 && <0.2
  build-depends:       hfish-parser         >=0.1 && <0.2
  build-depends:       nfc-text             >= 0.1.0 && < 0.2
  build-depends:       extra                >= 1.5.3 && < 1.7
  
  default-language:    Haskell2010

