name:                hfish
version:             0.1.0.0
synopsis:            Interpreter for a fish-like language
-- description:         
license:             GPL-3
license-file:        LICENSE
-- author:              
-- maintainer:          
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hfish
  main-is:             Main.hs
  other-modules:       HFish.Version
  other-modules:       HFish.Description
  other-modules:       HFish.Main
  other-modules:       HFish.Main.Interactive
  other-modules:       HFish.Main.NonInteractive
  other-modules:       HFish.Startup
  other-modules:       HFish.Types
  other-modules:       HFish.Debug
  other-modules:       HFish.Utils
  other-modules:       HFish.Dispatch

  other-extensions:    TemplateHaskell
  other-extensions:    FlexibleInstances
  other-extensions:    ScopedTypeVariables
  other-extensions:    LambdaCase
  other-extensions:    OverloadedStrings
  
  ghc-options:         -threaded

  build-depends:       base                 >=4.9 && <4.12
  build-depends:       text                 >=1.2 && <1.3
  build-depends:       containers           >=0.5 && <0.6
  build-depends:       lens                 >=4.15 && <4.17
  build-depends:       directory            >= 1.3.0 && < 1.4
  build-depends:       mtl                  >=2.2 && <2.3
  build-depends:       process              >=1.4 && <1.7
  build-depends:       temporary            >=1.2 && <1.3
  build-depends:       filepath             >=1.4 && <1.5
  build-depends:       regex-applicative    >=0.3 && <0.4
  build-depends:       trifecta             >=1.6 && <1.8
  build-depends:       ansi-wl-pprint       >=0.6 && <0.7
  build-depends:       unix                 >=2.7 && <2.8
  build-depends:       haskeline            >=0.7 && <0.8
  build-depends:       optparse-applicative >=0.13 && <0.15
  build-depends:       scientific           >=0.3 && <0.4
  build-depends:       parsers              >=0.12 && <0.13
  build-depends:       attoparsec           >=0.13 && <0.14
  build-depends:       random               >=1.1 && <1.2
  build-depends:       bytestring           >= 0.10.8 && < 0.11
  build-depends:       GenericPretty        >= 1.2.1 && < 1.3
  build-depends:       pretty               >= 1.1.3 && < 1.2
  build-depends:       deepseq              >= 1.4.2 && < 1.5
  build-depends:       hashable             >= 1.2.4 && < 1.3
  build-depends:       unordered-containers >= 0.2.7 && < 0.3
  build-depends:       gitrev               >= 1.2.0 && < 1.4
  build-depends:       posix-fd-io          >= 0.1.0 && < 0.2
  build-depends:       fish-lang            >= 0.1.0 && < 0.2
  build-depends:       fish-parser          >=0.1 && <0.2
  build-depends:       hfish-parser         >=0.1 && <0.2
  build-depends:       hfish-interpreter    >=0.1 && <0.2
  build-depends:       nfc-text             >= 0.1.0 && < 0.2
  build-depends:       extra                >= 1.5.3 && < 1.7
  
  default-language:    Haskell2010

